actions: remove macOS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,15 +22,12 @@ option(BUILD_LV2_PLUGIN "If the LV2 plugin should be built" ON)
 option(BUILD_LADSPA_PLUGIN "If the LADSPA plugin should be built" ON)
 option(BUILD_AU_PLUGIN "If the AU plugin should be built (macOS only)" ON)
 option(BUILD_AUV3_PLUGIN "If the AUv3 plugin should be built (macOS only)" ON)
-option(WITH_OPTIMIZE "Compile RNNoise with optimize and avx intrinsics" ON)
+option(WITH_AVX "Compile RNNoise with avx intrinsics" ON)
 
-if (WITH_OPTIMIZE)
+if (WITH_AVX)
     if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /Ox /arch:AVX2")
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Ox /arch:AVX2")
-    elseif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
     else ()
         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -march=native -mtune=native -mavx -mavx2")
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -march=native -mtune=native -mavx -mavx2")
