--- a/src/juce_plugin/CMakeLists.txt
+++ b/src/juce_plugin/CMakeLists.txt
@@ -42,7 +42,7 @@ function(compile_plugins formats suffix default_channels)
             PLUGIN_CODE Rnn1               # A unique four-character plugin id with at least one upper-case character
             FORMATS "${formats}"
             PRODUCT_NAME "rnnoise${suffix}"
-            LV2URI "https://github.com/werman/noise-suppression-for-voice"
+            LV2URI "https://github.com/werman/noise-suppression-for-voice#${default_channels}ch"
             VST_COPY_DIR "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/vst"
             VST3_COPY_DIR "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}"
             AU_COPY_DIR "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}"
