Remove native arch build flags
Don't use march=native/mtune=native because we might be building on a different system to the one we execute on (eg: packaging). User can set arch/tune flags as appropriate.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,8 +29,8 @@ if (WITH_AVX)
         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /Ox /arch:AVX2")
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Ox /arch:AVX2")
     else ()
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -march=native -mtune=native -mavx -mavx2")
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -march=native -mtune=native -mavx -mavx2")
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -mavx -mavx2")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -mavx -mavx2")
     endif ()
 endif ()
 
